# plugin-ldap

./: .gitignore  .gitmodules  LICENSE  Makefile.am  README.md  configure.ac  plugin.c
.github/workflows/: ccpp.yml
resources/: ldap.conf
